generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum UserRole {
  admin
  attendant
  client
}

enum AppointmentStatus {
  scheduled
  completed
  cancelled
  no_show
}

enum PaymentStatus {
  pending
  paid
  refunded
  failed
}

enum PaymentMethod {
  cash
  pix
  credit_card
  debit_card
  other
}

model User {
  id                  String        @id @default(uuid()) @db.Uuid
  name                String
  email               String        @unique
  passwordHash        String
  role                UserRole
  active              Boolean       @default(true)
  client              Client?
  createdAppointments Appointment[] @relation("AppointmentCreatedBy")
  createdAt           DateTime      @default(now())
  updatedAt           DateTime      @updatedAt
}

model Client {
  id           String        @id @default(uuid()) @db.Uuid
  name         String
  email        String?
  phone        String?
  notes        String?
  active       Boolean       @default(true)
  userId       String?       @unique @db.Uuid
  user         User?         @relation(fields: [userId], references: [id])
  appointments Appointment[]
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
}

model Service {
  id              String        @id @default(uuid()) @db.Uuid
  name            String
  description     String?
  durationMinutes Int
  price           Decimal       @db.Decimal(10, 2)
  active          Boolean       @default(true)
  appointments    Appointment[]
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
}

model Appointment {
  id              String            @id @default(uuid()) @db.Uuid
  clientId        String            @db.Uuid
  serviceId       String            @db.Uuid
  createdByUserId String?           @db.Uuid
  scheduledAt     DateTime
  endAt           DateTime
  status          AppointmentStatus @default(scheduled)
  notes           String?
  client          Client            @relation(fields: [clientId], references: [id])
  service         Service           @relation(fields: [serviceId], references: [id])
  createdByUser   User?             @relation("AppointmentCreatedBy", fields: [createdByUserId], references: [id])
  payments        Payment[]
  createdAt       DateTime          @default(now())
  updatedAt       DateTime          @updatedAt
}

model Payment {
  id                String        @id @default(uuid()) @db.Uuid
  appointmentId     String        @db.Uuid
  amount            Decimal       @db.Decimal(10, 2)
  status            PaymentStatus @default(pending)
  method            PaymentMethod?
  paidAt            DateTime?
  externalReference String?
  appointment       Appointment   @relation(fields: [appointmentId], references: [id])
  createdAt         DateTime      @default(now())
  updatedAt         DateTime      @updatedAt
}
